# Edge_Viewer

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/edgeapp/: CameraPreview.kt  MainActivity.kt
app/src/main/java/com/example/edgeapp/gl/: GLRenderer.kt
app/src/main/res/layout/: activity_main.xml
web/: package.json  tsconfig.json
web/src/: index.html  main.ts  styles.css
